src/Components/Navigation/FileList/FileListItem/FileListItem.css
.filestable_content_item {
    display: grid;
    grid-template-columns: 3rem auto min-content 5rem 10rem;
    align-items: center;
    list-style-type: none;
    padding: 0;
    height: 4rem;
    margin: .5rem .125rem;
    background-color: white;
    box-shadow: 0 .125rem .125rem 0 rgba(0,0,0,.14),0 .1875rem .0625rem -.125rem rgba(0,0,0,.2),0 .0625rem .1875rem 0 rgba(0,0,0,.12);
}

.filestable_content_item:first-child {
    margin-top: .5rem;
}

.filestable_content_item:last-child {
    margin-bottom: .25rem;
}

.filestable_content_item_select {
    text-align: center;
    width: 3rem;
    line-height: 0;
    white-space: nowrap;
    border-right: .0625rem solid #ccc;
    cursor: pointer;
    user-select: none;
}

.filestable_content_item_name {
    text-align: left;
    flex-grow:20;
    flex-shrink: 20;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    padding-left: 1rem;
    cursor: pointer;
}

.filestable_content_item_name_rename {
    border: none;
    border-bottom: .0625rem solid rgba(0,0,0,.12);
    font-size: 1.25rem;
    max-width: 32rem;
    width: 100%;
}

.filestable_content_item_icons {
    white-space: nowrap;
    padding-left: 1rem;
}

.filestable_content_item_icons_item {
    display: inline-block;
    vertical-align: middle;
    border: none;
    border-radius: 50%;
    font-size: 1.5rem;
    height: 1.5rem;
    margin-left: 0;
    margin-right: 0;
    min-width: 1.5rem;
    width: 1.5rem;
    padding: .25rem;
    overflow: hidden;
    color: inherit;
    line-height: normal;
    background-color: transparent;
    cursor: pointer;
    box-sizing: content-box;
}

.filestable_content_item_icons_item:hover {
    background-color: rgba(158,158,158,.2);
}

.filestable_content_item_size {
    width: 5rem;
    text-align: end;
}

.filestable_content_item_lastupdate {
    width: 10rem;
    text-align: end;
    padding: 0 .5rem;
    box-sizing: border-box;
}

@media screen and (max-width:48rem) {
    .filestable_content_item {
        grid-template-columns: 3rem 6.5rem 4rem auto min-content;
        grid-template-rows: 70% 30%;
    }

    .filestable_content_item_select, .filestable_content_item_icons {
        grid-row-start: 1;
        grid-row-end: 3;
    }
      
    .filestable_content_item_select {
        grid-column-start: 1;
        grid-column-end: 1;
    }
      
    .filestable_content_item_name {
        grid-column-start: 2;
        grid-column-end: 5;
        align-self: end;
    }
      
    .filestable_content_item_icons {
        grid-column-start: 5;
        grid-column-end: 5;
    }

    .filestable_content_item_size {
        grid-column-start: 3;
        grid-column-end: 4;
        text-align: end;
        width: 4rem;
    }
    
    .filestable_content_item_lastupdate {
        grid-column-start: 2;
        grid-column-end: 3;
        grid-row-start: 2;
        grid-row-end: 3;
        text-align: start;
        width: 7.5rem;
        padding: 0 1rem;
    }

    .filestable_content_item_size, .filestable_content_item_lastupdate {
        font-size: .75rem;
        color: rgb(91, 91, 91);
        align-self: start;
    }
}

